Change script with event delegation and destruction

--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
         <header class="navbar-header">Міста України</header>
         <ul class="navbar-list">
           <li class="navbar-list-item">
-            <button id="kyiv" class="navbar-link">Київ</button>
+            <button class="navbar-link" data-city="kyiv">Київ</button>
           </li>
           <li class="navbar-list-item">
-            <button id="lviv" class="navbar-link">Львів</button>
+            <button class="navbar-link" data-city="lviv">Львів</button>
           </li>
           <li class="navbar-list-item">
-            <button id="mykolaiv" class="navbar-link">Миколаїв</button>
+            <button class="navbar-link" data-city="mykolaiv">Миколаїв</button>
           </li>
           <li class="navbar-list-item">
-            <button id="odesa" class="navbar-link">Одеса</button>
+            <button class="navbar-link" data-city="odesa">Одеса</button>
           </li>
           <li class="navbar-list-item">
-            <button id="ternopil" class="navbar-link">Тернопіль</button>
+            <button class="navbar-link" data-city="ternopil">Тернопіль</button>
           </li>
           <li class="navbar-list-item">
-            <button id="kharkiv" class="navbar-link">Харків</button>
+            <button class="navbar-link" data-city="kharkiv">Харків</button>
           </li>
           <li class="navbar-list-item">
-            <button id="kherson" class="navbar-link">Херсон</button>
+            <button class="navbar-link" data-city="kherson">Херсон</button>
           </li>
           <li class="navbar-list-item">
-            <button id="chernivtsi" class="navbar-link">Чернівці</button>
+            <button class="navbar-link" data-city="chernivtsi">Чернівці</button>
           </li>
         </ul>
       </nav>
